  o Restructure the code that manages GETCONFing values from Tor and then
    later SETCONFing any changed values to make it easier to add more pages
    like the 'Network' and 'Server' settings pages in the future.
  o If we prompt the user to enter a control password and they enter one,
    don't keep trying to use our randomly generated password.
  o Stop leaking memory for pretty much every circuit we plotted on the network
    map. Found by Roger Dingledine and his Valgrind.
  o Stop leaking memory if TorMapWidget::addRouter() is called for a router
    that is already on the map. Also found by Roger Dingledine and his
    Valgrind.
  o Stop leaking memory used by QTranslator and the configuration dialog on
    exit.
  o Default to using an ORPort of 443 when setting up a server on Windows.
    9001 is still the default everywhere else.
  o Fix a crash bug that could occur when Vidalia gets disconnected from Tor
    while waiting for a response to a previous command. Bug reported by Roger
    Dingledine. (Ticket #295)
  o Create a single TorProcess object used to start and stop Tor, instead of
    creating a new one each time and cleaning up after Tor exits. (Ticket
    #294)
  o Do the control connection asynchronously so we aren't trying to call
    waitForConnected() in the control socket thread before it has an event loop
    running.
  o Don't start Tor or test for a running Tor with an open control port until
    the main event loop is running.
  o Older Tors write their state file even if all we're doing is
    --hash-password. So if the user has configured a non-default data
    directory, include that in the list of command line arguments when we run
    Tor to hash the user's control password.
  o Support changing Tor's control port and authentication settings without
    having to restart Tor for the settings to take effect.
  o Recognize the REMAP stream status in STREAM events.