@@ -64,7 +64,7 @@
         </size>
        </property>
        <property name="contextMenuPolicy" >
-        <enum>Qt::NoContextMenu</enum>
+        <enum>Qt::CustomContextMenu</enum>
        </property>
        <property name="statusTip" >
         <string/>
@@ -171,7 +171,7 @@
           </size>
          </property>
          <property name="contextMenuPolicy" >
-          <enum>Qt::NoContextMenu</enum>
+          <enum>Qt::CustomContextMenu</enum>
          </property>
          <property name="statusTip" >
           <string/>
